app/registry/base/deployment.yaml
#@ load("@ytt:data", "data")
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: #@ data.values.registry.namespace
spec:
  replicas: 1
  selector:
    matchLabels: #@ data.values.registry.matchLabels
  template:
    metadata:
      labels: #@ data.values.registry.matchLabels
    spec:
      containers:
      - name: main
        image: #@ "registry:{}".format(data.values.registry.version)
        imagePullPolicy: Always
        ports:
        - name: api
          containerPort: 5000
---
kind: Service
apiVersion: v1
metadata:
  name: registry
  namespace: #@ data.values.registry.namespace
spec:
  selector: #@ data.values.registry.matchLabels
  ports:
  - name: api
    port: 5000
    targetPort: 5000
